Bug fix: Letter spacing of UI text is wider on macOS Monterey
(issue #120)

--- a/src/pages/options.css
+++ b/src/pages/options.css
@@ -603,6 +603,10 @@ body[data-os="mac"] #turn-off-sync-clippings-dlg .msgbox-icon {
     --height: 320px;
 }
 
+body[data-os="mac"] #about-dlg {
+    --width: 414px;
+}
+
 body[data-locale="de"] #about-dlg {
     height: 326px;
 }
